--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <title>Welcome to kakaoTalk</title>
 </head>
 <body>
-    <div id="status-bar">
+    <div class="status-bar">
         <div class="status-bar_column"></div>
             <span>No Service</span>
-            <!--wifi-icon-->
+            <i class="fas fa-wifi"></i>
         <div class="status-bar_column"></div>
             <span>18:43</span>
         <div class="status-bar_column"></div>
             <span>11%</span>
-            <!--battery-icon-->
-            <!--lightning-icon-->
+            <i class="fas fa-battery-three-quarters"></i>
+            <i class="fas fa-bolt"></i>
     </div>
+    <script src="https://kit.fontawesome.com/34003d2ca5.js" crossorigin="anonymous">
+    </script>
 </body>
 </html>
 
