--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
             <i class="fas fa-battery-three-quarters"></i>
             <i class="fas fa-bolt"></i>
     </div>
+
+    <header class="welcome-header">
+        <h1 class="welcome-header__title">Welcome to KakaoTalk</h1>
+        <p class="welcome-header__text">If you have a Kakao Account, log in with your email or phone number.</p>
+    </header>
+
+    <form id="login-form">
+        <input type="text" placeholder="Email or phone number"/>
+        <input type="password" placeholder="password"/>
+        <input type="submit" value="Log In"/>
+        <input type="submit" value="Sign Up"/>
+        <a href="#">Find Kakao Account or Password</a>
+    </form>
+
     <script src="https://kit.fontawesome.com/34003d2ca5.js" crossorigin="anonymous">
     </script>
 </body>
