--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +9,18 @@
 </head>
 <body>
     <div class="status-bar">
-        <div class="status-bar_column"></div>
+        <div class="status-bar__column">
             <span>No Service</span>
             <i class="fas fa-wifi"></i>
-        <div class="status-bar_column"></div>
+        </div>
+        <div class="status-bar__column">
             <span>18:43</span>
-        <div class="status-bar_column"></div>
+        </div>
+        <div class="status-bar__column">
             <span>11%</span>
-            <i class="fas fa-battery-three-quarters"></i>
+            <i class="fas fa-battery-three-quarters fa-lg" ></i>
             <i class="fas fa-bolt"></i>
+        </div>
     </div>
 
     <header class="welcome-header">
